@@ -2,16 +2,16 @@ import mongoose from "mongoose";
 
 import { IPoll } from "../interfaces/IPoll";
 
-const schemaGroup = new mongoose.Schema<IPoll>({
+const schemaPoll = new mongoose.Schema<IPoll>({
     id: String,
     message_id: Number,
     group_id: Number,
     expire: Date,
     type: String,
-    answered: Array<string>,
+    answered: [Number],
     stop: { type: Boolean, default: false },
     created: { type: Date, default: () => new Date() },
     updated: { type: Date, default: null }
 });
 
-export const modelPoll = mongoose.model("poll", schemaGroup, "polls");
+export const modelPoll = mongoose.model("poll", schemaPoll, "polls");
