@@ -10,7 +10,8 @@ const schemaUser = new mongoose.Schema<IUser>({
     username: String,
     points: Number,
     updated: { type: Date, default: null },
-    created: { type: Date, default: () => new Date() }
+    created: { type: Date, default: () => new Date() },
+    scoreMultiplier: { type: Number, default: 0 }
 });
 
 export const modelUser = mongoose.model("user", schemaUser, "users");
