@@ -7,8 +7,8 @@ import Logger from "./lib/logger";
 import listenersBot from "./bot";
 import cronPoll from "./cron/cronPoll";
 import cronWeather from "./cron/cronWeather";
-import { modelVersion } from "./domains/models/versionModel";
-import { TOKEN_BOT, URL_MONGO, USERNAME_BOT, VERSION_CURRENT_DB } from "./env";
+import versionUtils from "./utils/versionUtils";
+import { TOKEN_BOT, URL_MONGO, USERNAME_BOT } from "./env";
 
 export let bot: TelegramBot;
 
@@ -38,14 +38,8 @@ async function main(){
     }
     logger.info("Mongo connected!");
 
-    //check version
-    const find = await modelVersion.findOne({name: "gfb"});
-    if (_.isNil(find)){
-        logger.debug("Not found document for track version for services");
-        modelVersion.insertOne({name: "gfb", version: VERSION_CURRENT_DB});
-        logger.info("Created track version for services");
-    }
-    //! altrimenti sará uno switch con le versioni opportune con le modifiche opportune dei dati
+    //versioning management
+    await versionUtils.main();
 
     //telegram
     try {
