@@ -17,6 +17,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Added
 - If you share your location and when the poll closes, you'll receive a summary of your movements.
+- Score multiplier
 
 
 ## [1.0.0] - 2025-07-20
